[Fix bugs]: passed tests